fix(webapp): correct responsive menu behavior
Related to #CAM-2226

--- a/client/templates/navigation.html
+++ b/client/templates/navigation.html
@@ -1,5 +1,5 @@
 <!-- # CE - src/main/webapp/app/admin/templates/navigation.html -->
-<div class="nav-collapse collapse navbar-responsive-collapse" ng-cloak>
+<div class="nav-collapse collapse" ng-cloak>
   <ul class="nav ng-scope" ng-controller="NavigationController" if-logged-in>
 
     <li class="dropdown" ng-class="activeClass('#/user')">
