fix(webapp): correct responsive menu behavior
Related to #CAM-2226

--- a/client/webapp/src/main/webapp/assets/styles/cockpit/loader.less
+++ b/client/webapp/src/main/webapp/assets/styles/cockpit/loader.less
@@ -28,8 +28,8 @@
 // @import "../../vendor/bootstrap/less/navs.less";
 // @import "../../vendor/bootstrap/less/navbar.less";
 // @import "../../vendor/bootstrap/less/breadcrumbs.less";
-@import "../../vendor/bootstrap/less/pagination.less";
-@import "../../vendor/bootstrap/less/pager.less";
+// @import "../../vendor/bootstrap/less/pagination.less";
+// @import "../../vendor/bootstrap/less/pager.less";
 // @import "../../vendor/bootstrap/less/labels.less";
 // @import "../../vendor/bootstrap/less/badges.less";
 // // @import "../../vendor/bootstrap/less/jumbotron.less";
@@ -49,12 +49,12 @@
 // // @import "../../vendor/bootstrap/less/carousel.less";
 
 // // Utility classes
-// @import "../../vendor/bootstrap/less/utilities.less";
+// // @import "../../vendor/bootstrap/less/utilities.less";
 // // @import "../../vendor/bootstrap/less/responsive-utilities.less";
 
 
 @import "../bootstrap.patched.less";
-// @import "../bootstrap-responsive.less";
+@import "../bootstrap-responsive.less";
 
 @import "../common.less";
 
