--- a/client/webapp/src/main/webapp/app/tasklist/templates/navigation.html
+++ b/client/webapp/src/main/webapp/app/tasklist/templates/navigation.html
@@ -1,5 +1,5 @@
 <!-- # CE - src/main/webapp/app/tasklist/templates/navigation.html -->
-<div class="nav-collapse collapse navbar-responsive-collapse" ng-cloak>
+<div class="nav-collapse" ng-cloak>
   <ul class="nav pull-right" ng-controller="AuthenticationController">
 
     <!-- CAM-1098 -->
