chore(scaffolding): setup the project with some of its features
This commit can be considered as the first (relevant) commit.
It adds the ability for a user to login and start a process.

Obviously, the project has to be considered as UNSTABLE
and is subject to big changes in a near future.

--- a/client/client/scripts/controls/styles.less
+++ b/client/client/scripts/controls/styles.less
@@ -17,4 +17,17 @@
   .sort-direction {
     font-size: 12px;
   }
+
+  // h5 {
+  //   overflow: visible;
+
+  //   a {
+  //     overflow: visible;
+  //   }
+
+  //   .glyphicon {
+  //     vertical-align: bottom;
+  //     height: 14px;
+  //   }
+  // }
 }
