chore(bower): change hyperagent version
fix(notifier): correct a variable in styles.less

--- a/client/client/scripts/notifier/styles.less
+++ b/client/client/scripts/notifier/styles.less
@@ -41,7 +41,7 @@
     border-color: @state-danger-border;
     background-color: @state-danger-bg;
     .dismiss {
-      color: @state-danger-color;
+      color: @state-danger-text;
     }
   }
 }
