--- a/client/client/scripts/pile/styles.less
+++ b/client/client/scripts/pile/styles.less
@@ -40,6 +40,7 @@
     text-transform: uppercase;
     padding-left: (@grid-gutter-width / 2);
     padding-right: (@grid-gutter-width / 2);
+    margin-bottom: 4px;
   }
 
   .info {
