chore(splashscreen): add a splashscreen to inform user of dev stage

--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -131,7 +131,7 @@
   // @import "../bower_components/bootstrap/less/progress-bars";
   // @import "../bower_components/bootstrap/less/media";
   @import "../bower_components/bootstrap/less/list-group";
-  // @import "../bower_components/bootstrap/less/panels";
+  @import "../bower_components/bootstrap/less/panels";
   // @import "../bower_components/bootstrap/less/responsive-embed";
   // @import "../bower_components/bootstrap/less/wells";
   // @import "../bower_components/bootstrap/less/close";
@@ -167,6 +167,12 @@
 @import "navbar";
 
 @import "./jquery.minicolors.less";
+
+
+.splash-screen {
+  margin-top: 15px;
+}
+
 
 
 .text-help {
