--- a/client/client/scripts/controls/styles.less
+++ b/client/client/scripts/controls/styles.less
@@ -2,6 +2,13 @@
 .controls {
   .inner {
     border-bottom: 1px dashed @gray-light;
+
+    height: 36px;
+    text-align: right;
+  }
+
+  h5 {
+    margin: 0;
   }
 
   .sorting {
