feat(splashscreen): move the splashscreen to the login

--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -96,6 +96,10 @@
   font-weight: normal;
 }
 
+strong {
+  .font-bold();
+}
+
 // Core variables and mixins
   @import "../bower_components/bootstrap/less/mixins";
 
@@ -169,9 +173,9 @@
 @import "./jquery.minicolors.less";
 
 
-.splash-screen {
-  margin-top: 15px;
-}
+// .splash-screen {
+//   margin-top: 15px;
+// }
 
 
 
