--- a/client/webapp/src/main/webapp/app/cockpit/templates/navigation.html
+++ b/client/webapp/src/main/webapp/app/cockpit/templates/navigation.html
@@ -4,20 +4,24 @@
 
     <li engine-select></li>
 
-    <li class="dropdown" if-logged-in ng-cloak>
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+    <li class="dropdown" 
+      if-logged-in ng-cloak>
+      <a href="#" 
+        sem-show-user-actions
+        class="dropdown-toggle" 
+        data-toggle="dropdown">
         <i class="icon-user icon-white"></i> {{ authentication.user.name }}
       </a>
 
       <ul class="dropdown-menu">
         <li>
-          <a ng-href="{{ '../../admin/:engine/#/users/' + authentication.user.name + '?tab=profile' | uri }}">
+          <a sem-jump-to-profile ng-href="{{ '../../admin/:engine/#/users/' + authentication.user.name + '?tab=profile' | uri }}">
             My Profile
           </a>
         </li>
         <li class="divider"></li>
         <li>
-          <a href ng-click="logout()">
+          <a href sem-log-out ng-click="logout()">
             Sign out
           </a>
         </li>
@@ -33,10 +37,10 @@
 
       <ul class="dropdown-menu">
         <li>
-          <a ng-href="{{ '../../admin/:engine/' | uri }}">Admin</a>
+          <a sem-jump-to-admin ng-href="{{ '../../admin/:engine/' | uri }}">Admin</a>
         </li>
         <li ng-show="authentication.canAccess('tasklist')">
-          <a ng-href="{{ '../../tasklist/:engine/' | uri }}">Tasklist</a>
+          <a sem-jump-to-tasklist ng-href="{{ '../../tasklist/:engine/' | uri }}">Tasklist</a>
         </li>
       </ul>
     </li>
