chore(pile): load tasks from pile filters

--- a/client/client/styles/layout.less
+++ b/client/client/styles/layout.less
@@ -29,6 +29,7 @@ html, body {
 body {
   // padding-top: 50px;
   padding-bottom: 25px;
+  overflow-y: scroll;
 }
 
 h1,
@@ -91,3 +92,5 @@ footer.page {
     min-height: 50px;
   }
 }
+
+@import "_loader";
