--- a/client/client/styles/_loader.less
+++ b/client/client/styles/_loader.less
@@ -3,16 +3,17 @@ http://projects.lukehaas.me/css-loaders
 
 <div class="loader">Loading...</div>
 */
-.loader() {
+.loader {
+  @size: 20px;
   border-radius: 50%;
 
-  font-size: 11px;
+  font-size: ((@size / 2) + 1);
   text-indent: -99999em;
-  margin: 30% auto;
+  margin: (@size * 1) auto;
   position: relative;
-  width: 10em;
-  height: 10em;
-  box-shadow: inset 0 0 0 1em #FFF;
+  width: @size;
+  height: @size;
+  // box-shadow: inset 0 0 0 1em #FFF;
 
   &:before,
   &:after {
@@ -24,26 +25,26 @@ http://projects.lukehaas.me/css-loaders
     content: '';
   }
   &:before {
-    width: 5.2em;
-    height: 10.2em;
-    background: #0dcecb;
-    border-radius: 10.2em 0 0 10.2em;
-    top: -0.1em;
-    left: -0.1em;
-    -webkit-transform-origin: 5.2em 5.1em;
-    transform-origin: 5.2em 5.1em;
+    width: ((@size / 2) + 2);
+    height: (@size + 4);
+    background: @brand-primary;
+    border-radius: (@size + 4) 0 0 (@size + 4);
+    top: -1px;
+    left: -1px;
+    -webkit-transform-origin: ((@size / 2) + 2) ((@size / 2) + 1);
+    transform-origin: ((@size / 2) + 2) ((@size / 2) + 1);
     -webkit-animation: load2 2s infinite ease 1.5s;
     animation: load2 2s infinite ease 1.5s;
   }
   &:after {
-    width: 5.2em;
-    height: 10.2em;
-    background: #0dcecb;
-    border-radius: 0 10.2em 10.2em 0;
-    top: -0.1em;
-    left: 5.1em;
-    -webkit-transform-origin: 0px 5.1em;
-    transform-origin: 0px 5.1em;
+    width: ((@size / 2) + 2);
+    height: (@size + 4);
+    background: @brand-primary;
+    border-radius: 0 (@size + 4) (@size + 4) 0;
+    top: -1px;
+    left: ((@size / 2) + 1);
+    -webkit-transform-origin: 0px ((@size / 2) + 1);
+    transform-origin: 0px ((@size / 2) + 1);
     -webkit-animation: load2 2s infinite ease;
     animation: load2 2s infinite ease;
   }
