chore(design): work on design, styles

--- a/client/client/scripts/pile/styles.less
+++ b/client/client/scripts/pile/styles.less
@@ -108,6 +108,12 @@
   }
 }
 
+.no-match {
+  text-align: center;
+  margin: 20px auto;
+
+}
+
 // .display,
 // .pile-form {
 //   position: relative;
