--- a/client/webapp/src/main/webapp/app/admin/templates/navigation.html
+++ b/client/webapp/src/main/webapp/app/admin/templates/navigation.html
@@ -3,18 +3,18 @@
   <ul class="nav ng-scope" ng-controller="NavigationController" if-logged-in>
 
     <li class="dropdown" ng-class="activeClass('#/user')">
-      <a href="#/users">Users</a>
+      <a sem-show-users href="#/users">Users</a>
     </li>
 
     <li class="dropdown" ng-class="activeClass('#/group')">
-      <a href="#/groups">Groups</a>
+      <a sem-show-groups href="#/groups">Groups</a>
     </li>
 
     <li class="dropdown" ng-class="activeClass('#/authorization')" show-if-authorized auth-permission="ALL" auth-resource-name="authorization">
-      <a href="#/authorization?resource=0">Authorizations</a>
+      <a sem-show-authorizations href="#/authorization?resource=0">Authorizations</a>
     </li>
     <li class="dropdown" ng-class="activeClass('#/system')">
-      <a href="#/system?section=system-settings-general">System</a>
+      <a sem-show-systems href="#/system?section=system-settings-general">System</a>
     </li>
   </ul>
 
@@ -50,6 +50,7 @@
 
     <li class="dropdown">
       <a href
+         sem-show-applications
          class="dropdown-toggle"
          data-toggle="dropdown">
         <i class="icon-home icon-white"></i>
