--- a/client/webapp/src/main/webapp/app/cockpit/templates/navigation.html
+++ b/client/webapp/src/main/webapp/app/cockpit/templates/navigation.html
@@ -15,7 +15,7 @@
 
       <ul class="dropdown-menu">
         <li>
-          <a sem-jump-to-profile ng-href="{{ '../../admin/:engine/#/users/' + authentication.user.name + '?tab=profile' | uri }}">
+          <a sem-jump-to-profile="#" ng-href="{{ '../../admin/:engine/#/users/' + authentication.user.name + '?tab=profile' | uri }}">
             My Profile
           </a>
         </li>
@@ -31,7 +31,10 @@
     <li class="divider-vertical" if-logged-in></li>
 
     <li class="dropdown">
-      <a href class="dropdown-toggle" data-toggle="dropdown">
+      <a href
+        sem-show-applications
+        class="dropdown-toggle"
+        data-toggle="dropdown">
         <i class="icon-home icon-white"></i>
       </a>
 
