chore(process): add unmocked process definition queries
fix(sdk): use apiUri instead of appUri

improve(styles): change a bit the styles of modal dialogs

improve(api): provide a way to configure resources independently

chore(ui): work on styles and layout

--- a/client/client/scripts/pile/styles.less
+++ b/client/client/scripts/pile/styles.less
@@ -1,6 +1,8 @@
 
 .task-piles {
-
+  .task-pile:first-child {
+    margin-top: 0;
+  }
 }
 
 .task-pile {
@@ -111,7 +113,6 @@
 .no-match {
   text-align: center;
   margin: 20px auto;
-
 }
 
 // .display,
@@ -147,6 +148,14 @@
 //   }
 // }
 
-.filter-add {
-  text-align: right;
+form[name="pile"] {
+  .description-field,
+  .filter-add,
+  .pile-filter {
+    margin-top: (@grid-gutter-width / 2);
+  }
+
+  .filter-add {
+    text-align: right;
+  }
 }
