--- a/client/client/scripts/task/styles.less
+++ b/client/client/scripts/task/styles.less
@@ -3,6 +3,7 @@
   .tab-content {
     padding: @grid-gutter-width 0;
   }
+
   .meta {
     li {
       height: 30px;
@@ -11,6 +12,15 @@
     input {
       line-height: 1em;
       outline: none;
+    }
+  }
+
+  .names {
+    h2 {
+      margin-top: 0;
+    }
+    h4:empty {
+      display: none;
     }
   }
 }
@@ -85,6 +95,6 @@
   margin: auto;
 }
 
-.well.no-task {
-  margin-top: 15px;
-}
+// .well.no-task {
+//   margin-top: 15px;
+// }
