--- a/client/client/styles/layout.less
+++ b/client/client/styles/layout.less
@@ -86,6 +86,12 @@ footer.page {
 }
 
 
+.task-board.row {
+  .cols > .inner {
+    margin-top: (@grid-gutter-width / 2);
+  }
+}
+
 .task-piles,
 .focused-task {
   > .actions {
