--- a/client/client/scripts/pile/styles.less
+++ b/client/client/scripts/pile/styles.less
@@ -43,6 +43,7 @@
     padding-left: (@grid-gutter-width / 2);
     padding-right: (@grid-gutter-width / 2);
     margin-bottom: 7px;
+    text-transform: uppercase;
   }
 
   .info {
