--- a/client/client/styles/_vars.less
+++ b/client/client/styles/_vars.less
@@ -39,11 +39,7 @@
 
 // Logos -------------------------------------------------------------
 
-@logo-admin:    '../img/admin/app-logo.png';
-
-@logo-tasklist: '../img/tasklist/app-logo.png';
-
-@logo-cockpit:  '../img/cockpit/app-logo.png';
+@logo-cockpit:  '../assets/images/cockpit/app-logo.png';
 
 // Logos -------------------------------------------------------------
 
