refactor(notifications): use the commons-ui notifications

--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -171,6 +171,7 @@ strong {
 @import "navbar";
 
 @import "./jquery.minicolors.less";
+@import "./notifications-panel.less";
 
 
 // .splash-screen {
