--- a/client/client/scripts/templates/navigation.html
+++ b/client/client/scripts/templates/navigation.html
@@ -1,6 +1,6 @@
 <!-- # CE - src/main/webapp/app/admin/templates/navigation.html -->
 <div class="nav-collapse collapse" ng-cloak>
-  <ul class="nav ng-scope" ng-controller="NavigationController" if-logged-in>
+  <ul class="nav ng-scope" ng-controller="NavigationController" cam-if-logged-in>
 
     <li class="dropdown" ng-class="activeClass('#/user')">
       <a sem-show-users href="#/users">Users</a>
@@ -23,17 +23,17 @@
     <li engine-select></li>
 
     <li class="dropdown"
-        if-logged-in>
+        cam-if-logged-in>
       <a href
          sem-show-user-actions
          class="dropdown-toggle"
          data-toggle="dropdown">
-        <i class="icon-user icon-white"></i> {{ authentication.user.name }}
+        <i class="icon-user icon-white"></i> {{ authentication.name }}
       </a>
 
       <ul class="dropdown-menu">
         <li>
-          <a sem-jump-to-profile ng-href="{{ '../../admin/:engine/#/users/' + authentication.user.name + '?tab=profile' | uri }}">
+          <a sem-jump-to-profile ng-href="{{ '../../admin/:engine/#/users/' + authentication.name + '?tab=profile' | uri }}">
             My Profile
           </a>
         </li>
@@ -46,7 +46,7 @@
       </ul>
     </li>
 
-    <li class="divider-vertical" if-logged-in></li>
+    <li class="divider-vertical" cam-if-logged-in></li>
 
     <li class="dropdown">
       <a href
