chore(scaffolding): move tasks directives to a sub-folder and cleanup

--- a/client/client/scripts/user/styles.less
+++ b/client/client/scripts/user/styles.less
@@ -12,9 +12,11 @@
       margin: 0;
       border: 0;
     }
-    // just to show the page header
-    // .modal-dialog {
-    //   top: 50px;
-    // }
+    .modal-content {
+      background: @modal-footer-bg;
+      form {
+        background: @modal-content-bg;
+      }
+    }
   }
 }
