--- a/client/client/scripts/templates/navigation.html
+++ b/client/client/scripts/templates/navigation.html
@@ -4,18 +4,18 @@
 
     <li engine-select></li>
 
-    <li class="dropdown" 
-      if-logged-in ng-cloak>
-      <a href="#" 
+    <li class="dropdown"
+      cam-if-logged-in ng-cloak>
+      <a href="#"
         sem-show-user-actions
-        class="dropdown-toggle" 
+        class="dropdown-toggle"
         data-toggle="dropdown">
-        <i class="icon-user icon-white"></i> {{ authentication.user.name }}
+        <i class="icon-user icon-white"></i> {{ authentication.name }}
       </a>
 
       <ul class="dropdown-menu">
         <li>
-          <a sem-jump-to-profile="#" ng-href="{{ '../../admin/:engine/#/users/' + authentication.user.name + '?tab=profile' | uri }}">
+          <a sem-jump-to-profile="#" ng-href="{{ '../../admin/:engine/#/users/' + authentication.name + '?tab=profile' | uri }}">
             My Profile
           </a>
         </li>
@@ -28,7 +28,7 @@
       </ul>
     </li>
 
-    <li class="divider-vertical" if-logged-in></li>
+    <li class="divider-vertical" cam-if-logged-in></li>
 
     <li class="dropdown">
       <a href
