refactor(misc): correct filters date format, sorting, tab nav

--- a/client/client/scripts/pile/styles.less
+++ b/client/client/scripts/pile/styles.less
@@ -82,14 +82,18 @@
   }
 }
 
-.task-list .task {
-  margin: (@grid-gutter-width / 2) 0;
-  border-top: 1px dashed @gray-light;
-  padding: (@grid-gutter-width / 2) 0;
-  &:first-child {
-    margin-top: 0;
-    border-top: 0;
-    // padding-top: 0;
+.task-list {
+  .task {
+    margin: 0;
+    border-top: 1px dashed @gray-light;
+    padding: (@grid-gutter-width / 2) 0;
+    &:first-child {
+      border-top: 0;
+    }
+    &:focus {
+      outline: none;
+      background-color: @gray-lighter;
+    }
   }
 }
 
