refactor(notifications): add a panel at the top of page

--- a/client/client/styles/notifications-panel.less
+++ b/client/client/styles/notifications-panel.less
@@ -31,4 +31,18 @@
   .alert-error {
     .alert-variant(@alert-danger-bg; @alert-danger-border; @alert-danger-text);
   }
+
+  .alert-information {
+    .alert-variant(@alert-info-bg; @alert-info-border; @alert-info-text);
+  }
+}
+
+.page-notifications {
+  position: relative;
+  z-index: 1000;
+  > .notifications {
+    position: absolute;
+    width: 40%;
+    margin: 0 30%;
+  }
 }
