refactor(layout): work on layout and styles
and add some translations

--- a/client/client/scripts/form/styles.less
+++ b/client/client/scripts/form/styles.less
@@ -23,9 +23,13 @@
   .btn-group {
     position: absolute;
     right: 0;
-    top: 100%;
-    margin-top: 2px;
     background-color: @body-bg;
+
+    // top: 100%;
+    // margin-top: 2px;
+
+    bottom: 100%;
+    margin-bottom: 2px;
   }
 }
 
