--- a/client/client/scripts/pile/styles.less
+++ b/client/client/scripts/pile/styles.less
@@ -83,10 +83,11 @@
 }
 
 .task-list {
-  .task {
+  li.task {
     margin: 0;
     border-top: 1px dashed @gray-light;
     padding: (@grid-gutter-width / 2) 0;
+
     &:first-child {
       border-top: 0;
     }
