--- a/client/client/scripts/task/styles.less
+++ b/client/client/scripts/task/styles.less
@@ -5,6 +5,17 @@
   }
 
   .meta {
+    // &:first-child {
+    //   margin-bottom: 0;
+    // }
+
+    width: 50%;
+    float: left;
+    &:last-child {
+      clear: right;
+    }
+
+    //------------------
     li {
       height: 30px;
       line-height: 30px;
