--- a/client/client/scripts/pile/styles.less
+++ b/client/client/scripts/pile/styles.less
@@ -29,12 +29,12 @@
     border-bottom: (@grid-gutter-width / 5) solid transparent;
     border-right: (@grid-gutter-width / 5) solid @body-bg;
   }
-  &.active:after {
-    margin-top: -(@grid-gutter-width / 3);
-    border-top: (@grid-gutter-width / 3) solid transparent;
-    border-bottom: (@grid-gutter-width / 3) solid transparent;
-    border-right: (@grid-gutter-width / 3) solid @body-bg;
-  }
+  // &.active:after {
+  //   margin-top: -(@grid-gutter-width / 3);
+  //   border-top: (@grid-gutter-width / 3) solid transparent;
+  //   border-bottom: (@grid-gutter-width / 3) solid transparent;
+  //   border-right: (@grid-gutter-width / 3) solid @body-bg;
+  // }
 
   h4 {
     cursor: pointer;
@@ -80,6 +80,12 @@
     }
     // margin-left: -15px;
   }
+}
+.active > .task-pile:after {
+  margin-top: -(@grid-gutter-width / 3);
+  border-top: (@grid-gutter-width / 3) solid transparent;
+  border-bottom: (@grid-gutter-width / 3) solid transparent;
+  border-right: (@grid-gutter-width / 3) solid @body-bg;
 }
 
 .task-list {
