--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -203,7 +203,7 @@ strong {
   }
 }
 
-.task-pile {
+.task-filter {
   .inner {
     background-color: @gray-light;
     margin-top: 1rem;
@@ -224,12 +224,12 @@ strong {
   }
 }
 
-.pile-header {
+.filter-header {
   position: relative;
   height: 4rem;
 }
 
-@import "../scripts/pile/styles";
+@import "../scripts/filter/styles";
 @import "../scripts/task/styles";
 @import "../scripts/navigation/styles";
 
