--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -269,9 +269,13 @@ strong {
     margin-bottom: 0;
   }
 }
+
 .modal-header,
+.modal-body,
 .modal-footer {
   margin: 0;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .modal-header {
