refactor(search): comment the tasks search until further development

--- a/client/client/scripts/filter/styles.less
+++ b/client/client/scripts/filter/styles.less
@@ -92,7 +92,7 @@
   border-right: (@grid-gutter-width / 3) solid @body-bg;
 }
 
-.task-list {
+.tasks-list {
   li.task {
     margin: 0;
     border-top: 1px dashed @gray-light;
@@ -100,6 +100,7 @@
 
     &:first-child {
       border-top: 0;
+      padding-top: 0;
     }
     &:focus {
       outline: none;
