refactor(navigation): harmonize navigation
improve(login): create a directive for the login form
fix(login): focus the username field in FF

Related to: CAM-2658

--- a/client/client/scripts/user/styles.less
+++ b/client/client/scripts/user/styles.less
@@ -1,28 +1,4 @@
-.modal {
-  &.user-login {
-    .modal-dialog,
-    .modal-content {
-      position: absolute;
-      width: auto;
-      height: auto;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
-      margin: 0;
-      border: 0;
-    }
-    .modal-content {
-      background: @modal-footer-bg;
-      form {
-        background: @modal-content-bg;
-      }
-    }
-  }
-
-  .auth-fields,
-  .auth-actions {
-    max-width: 330px;
-    margin: auto;
-  }
+.cam-auth-login {
+  max-width: 330px;
+  margin: auto;
 }
