refactor(navigation): harmonize navigation

--- a/client/client/scripts/templates/navigation.html
+++ b/client/client/scripts/templates/navigation.html
@@ -1,70 +1,99 @@
-<!-- # CE - src/main/webapp/app/admin/templates/navigation.html -->
-<div class="nav-collapse collapse" ng-cloak>
-  <ul class="nav ng-scope" ng-controller="NavigationController" cam-if-logged-in>
+<!-- # CE - camunda-admin-ui client/scripts/templates/navigation.html -->
+<div class="nav-collapse collapse"
+     ng-cloak>
+  <ul class="nav ng-scope"
+      ng-controller="NavigationController"
+      cam-if-logged-in>
 
-    <li class="dropdown" ng-class="activeClass('#/user')">
-      <a sem-show-users href="#/users">Users</a>
+    <li class="dropdown"
+        ng-class="activeClass('#/user')">
+      <a sem-show-users
+         href="#/users">Users</a>
     </li>
 
-    <li class="dropdown" ng-class="activeClass('#/group')">
-      <a sem-show-groups href="#/groups">Groups</a>
+    <li class="dropdown"
+        ng-class="activeClass('#/group')">
+      <a sem-show-groups
+         href="#/groups">Groups</a>
     </li>
 
-    <li class="dropdown" ng-class="activeClass('#/authorization')" show-if-authorized auth-permission="ALL" auth-resource-name="authorization">
-      <a sem-show-authorizations href="#/authorization?resource=0">Authorizations</a>
+    <li class="dropdown"
+        ng-class="activeClass('#/authorization')"
+        show-if-authorized
+        auth-permission="ALL"
+        auth-resource-name="authorization">
+      <a sem-show-authorizations
+         href="#/authorization?resource=0">Authorizations</a>
     </li>
-    <li class="dropdown" ng-class="activeClass('#/system')">
-      <a sem-show-systems href="#/system?section=system-settings-general">System</a>
+    <li class="dropdown"
+        ng-class="activeClass('#/system')">
+      <a sem-show-systems
+         href="#/system?section=system-settings-general">System</a>
     </li>
   </ul>
 
-  <ul class="nav pull-right" ng-controller="AuthenticationController">
+
+
+  <ul class="nav pull-right"
+      ng-controller="AuthenticationController">
 
     <li engine-select></li>
 
     <li class="dropdown"
-        cam-if-logged-in>
+        cam-if-logged-in
+        ng-cloak>
       <a href
          sem-show-user-actions
          class="dropdown-toggle"
          data-toggle="dropdown">
-        <i class="icon-user icon-white"></i> {{ authentication.name }}
+        <i class="icon-user icon-white"></i>
+        {{ authentication.name }}
       </a>
 
       <ul class="dropdown-menu">
         <li>
-          <a sem-jump-to-profile ng-href="{{ '../../admin/:engine/#/users/' + authentication.name + '?tab=profile' | uri }}">
+          <a sem-jump-to-profile
+             ng-href="{{ '../../admin/:engine/#/users/' + authentication.name + '?tab=profile' | uri }}">
             My Profile
           </a>
         </li>
+
         <li class="divider"></li>
+
         <li>
-          <a href sem-log-out ng-click="logout()">
+          <a href sem-log-out
+             ng-click="logout()">
             Sign out
           </a>
         </li>
       </ul>
     </li>
 
-    <li class="divider-vertical" cam-if-logged-in></li>
+    <li class="divider-vertical"
+        cam-if-logged-in
+        ng-cloak></li>
 
-    <li class="dropdown">
+    <li class="app-switch dropdown">
       <a href
          sem-show-applications
          class="dropdown-toggle"
          data-toggle="dropdown">
         <i class="icon-home icon-white"></i>
+        <b class="caret"></b>
       </a>
 
       <ul class="dropdown-menu">
-        <li ng-show="authentication.canAccess('cockpit')">
-          <a sem-jump-to-cockpit ng-href="{{ '../../cockpit/:engine/' | uri }}">Cockpit</a>
+        <li ng-show="!authentication || authentication.canAccess('cockpit')">
+          <a sem-jump-to-cockpit
+             ng-href="{{ '../../cockpit/:engine/' | uri }}">Cockpit</a>
         </li>
-        <li ng-show="authentication.canAccess('tasklist')">
-          <a sem-jump-to-tasklist ng-href="{{ '../../tasklist/:engine/' | uri }}">Tasklist</a>
+
+        <li ng-show="!authentication || authentication.canAccess('tasklist')">
+          <a sem-jump-to-tasklist
+             ng-href="{{ '../../tasklist/:engine/' | uri }}">Tasklist</a>
         </li>
       </ul>
     </li>
   </ul>
 </div>
-<!-- / CE - src/main/webapp/app/admin/templates/authorizations.html -->
+<!-- / CE - camunda-admin-ui client/scripts/templates/authorizations.html -->
