improve(navbar): use old logo and same height as cockpit

--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -25,6 +25,7 @@
 @navbar-default-link-hover-color:   darken(@navbar-default-link-color, 12%);
 @navbar-default-link-active-color:  @navbar-default-color;
 @navbar-default-link-active-bg:     @brand-primary;
+@navbar-height:                     41px;
 
 @modal-header-bg:                   lighten(@gray-lighter, 3%);
 @modal-footer-bg:                   @modal-header-bg;
