--- a/client/client/styles/navbar.less
+++ b/client/client/styles/navbar.less
@@ -1,11 +1,16 @@
 
 .navbar {
   border: none;
-  .vendor-icon {
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    background-image: url(../images/vendor-logo-16.png);
+
+  .navbar-brand {
+    width: 220px;
+    height: 39px;
+    background-image: url(../images/app-logo.png);
+  }
+
+  &>.container .navbar-brand,
+  &>.container-fluid .navbar-brand {
+    margin-left: -10px;
   }
 }
 
@@ -14,7 +19,7 @@
 .divider-vertical {
   display: none;
   @media (min-width: @grid-float-breakpoint) {
-    height: 50px;
+    height: @navbar-height;
     margin: 0 9px;
     border-right: 1px solid lighten(@brand-primary, 5%);
     border-left: 1px solid darken(@brand-primary, 5%);
