--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -295,10 +295,45 @@ strong {
 
 
 
-
 @import "../scripts/form/styles.less";
 @import "../scripts/user/styles.less";
 @import "../scripts/process/styles.less";
+
+
+/*
+┌─────────────────────────────────────────┐
+│                                         │
+└─────────────────────────────────────────┘
+*/
+
+
+
+.control-label {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.align-left {
+  text-align: left;
+}
+
+.align-right {
+  text-align: right;
+}
+
+
+
+/*
+┌─────────────────────────────────────────┐
+│                                         │
+└─────────────────────────────────────────┘
+*/
+
+
+
+
+
+
 
 
 
