--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -28,8 +28,8 @@
 // @import "../bower_components/bootstrap/less/navs.less";
 // @import "../bower_components/bootstrap/less/navbar.less";
 // @import "../bower_components/bootstrap/less/breadcrumbs.less";
-// @import "../bower_components/bootstrap/less/pagination.less";
-// @import "../bower_components/bootstrap/less/pager.less";
+@import "../bower_components/bootstrap/less/pagination.less";
+@import "../bower_components/bootstrap/less/pager.less";
 // @import "../bower_components/bootstrap/less/labels.less";
 // @import "../bower_components/bootstrap/less/badges.less";
 // // @import "../bower_components/bootstrap/less/jumbotron.less";
