feat(task): add datepicker to change due and follow up dates
This commit also deeply refactors the inline field directives.

Related to: CAM-2623

--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -11,6 +11,7 @@
 └─────────────────────────────────────────┘
 */
 @import "../bower_components/bootstrap/less/variables";
+@grid-gutter-width:                 30px;
 
 @brand-primary:                     #B5152B;
 @link-color:                        @brand-primary;
@@ -346,7 +347,7 @@ strong {
 }
 
 .overdue {
-  color: @brand-primary;
+  color: @brand-danger;
 }
 
 .loader {
