--- a/client/client/scripts/form/styles.less
+++ b/client/client/scripts/form/styles.less
@@ -1,12 +1,13 @@
-
-
 [cam-form-inline-field] {
   display: inline-block;
-  .view {
+  position: relative;
+
+  >.view {
     border: 1px solid transparent;
     margin: 0 2px;
     padding: 3px 4px;
     position: relative;
+
     &:hover {
       z-index: 99;
       cursor: pointer;
@@ -15,21 +16,52 @@
     }
   }
 
-  .edit {
-    position: relative;
-    z-index: 99;
+  >.edit {
+    min-height: 30px;
+    input {
+      max-height: 30px;
+    }
+  }
+
+  &[type="date"],
+  &[type="time"],
+  &[type="datetime"] {
+    >.edit {
+      display: block;
+      position: relative;
+      z-index: 99;
+      min-width: 90px;
+    }
+
+    // .edit-value {}
+
+    .field {
+      position: absolute;
+      top: 30px;
+      left: 0;
+      background-color: @body-bg;
+      overflow: hidden;
+      .box-shadow(0 3px 9px rgba(0,0,0,.5));
+    }
+
+    table button {
+      border: none;
+    }
+    thead button {
+      height: 28px;
+    }
+  }
+
+  .timepicker {
+    margin: auto;
   }
 
   .btn-group {
     position: absolute;
     right: 0;
     background-color: @body-bg;
-
-    // top: 100%;
-    // margin-top: 2px;
-
     bottom: 100%;
-    margin-bottom: 2px;
+    // margin-bottom: 2px;
   }
 }
 
@@ -47,10 +79,17 @@
     content: ' ';
     position: absolute;
     top: 0;
-    left: 0;
+    right: 0;
     z-index: 10;
     width: 100%;
     height: 100%;
     background-color: fade(@body-bg, 60%);
   }
+}
+
+.list-inline>[cam-form-inline-field] {
+  padding-right: 0;
+  // .btn-group {
+  //   left: 5px;
+  // }
 }
